--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   animated_bottom_navigation_bar: ^1.3.0
   google_fonts: ^6.1.0
+  supabase_flutter: ^1.10.23
 
 dev_dependencies:
   flutter_test:
