--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   animated_bottom_navigation_bar: ^1.3.0
   google_fonts: ^6.1.0
   supabase_flutter: ^1.10.3
+  google_maps_flutter: ^2.5.3
+  location: ^5.0.3
+  geolocator: ^11.0.0
 
 dev_dependencies:
   flutter_test:
