--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   google_maps_flutter: ^2.5.3
   location: ^5.0.3
   geolocator: ^11.0.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
