--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   location: ^5.0.3
   geolocator: ^11.0.0
   intl: ^0.19.0
+  flutter_colorpicker: ^1.0.3
 
 dev_dependencies:
   flutter_test:
